Style improvements and bug fixes
- Added :focus-visible in utils.scss for inset-box-shadow-with-transition,
- Set var(--p) as a default font size,
- Redefined some of the colors and added a standalone theme for mat-spinner,
- added material themes for each element in DOM instead of all-in-one mixin,
- Fixed a typo in fadeOut-to-top-animation.

--- a/src/app/getting-started/choose-path/choose-path.component.scss
+++ b/src/app/getting-started/choose-path/choose-path.component.scss
@@ -51,7 +51,7 @@ main {
   margin: 0 var(--padding) var(--padding);
   padding: var(--padding);
   min-height: 45vh;
-  @include border-radius("lg");
+  @include border-radius("md");
 
   display: grid;
   place-items: center;
@@ -93,10 +93,10 @@ main {
 }
 
 .CTA {
-  @extend %CTA, %primary-button;
+  @extend %CTA, %primary-button-1;
 
   &--alternative {
-    @extend %CTA, %secondary-button;
+    @extend %CTA, %primary-button-2;
   }
 }
 
