--- a/src/scss/components.scss
+++ b/src/scss/components.scss
@@ -10,36 +10,52 @@
   line-height: 1.5;
   width: 100%;
 
-  &:focus,
-  &:focus-visible {
+  &:focus {
     outline: 2px solid var(--color-accent-900);
+  }
+
+  &::placeholder {
+    color: var(--contrast-color-accent-300);
+    opacity: 0.75;
   }
 
   @media (prefers-color-scheme: dark) {
     @include inset-box-shadow-with-transition(var(--color-accent-200));
+
+    &::placeholder {
+      opacity: 0.65;
+    }
   }
 }
 
-a:focus,
-button:focus {
-  outline: none;
-  box-shadow: 0 0 0 5px rgba(0, 0, 0, 0.5);
-
-  @media (prefers-color-scheme: dark) {
-    box-shadow: 0 0 0 5px rgba(255, 255, 255, 0.5);
-  }
-}
-
-%primary-button {
+%primary-button-1 {
   @include inset-box-shadow-with-transition(var(--color-primary-100));
   background-color: var(--color-primary-600);
   color: var(--contrast-color-primary-600);
 }
 
-%secondary-button {
+%primary-button-2 {
   @include inset-box-shadow-with-transition(var(--color-primary-50));
   background-color: var(--color-primary-200);
   color: var(--contrast-color-primary-200);
+}
+
+%accent-button-1 {
+  @include inset-box-shadow-with-transition(var(--color-accent-200));
+  background-color: var(--color-accent-600);
+  color: var(--contrast-color-accent-600);
+}
+
+%accent-button-2 {
+  @include inset-box-shadow-with-transition(var(--color-accent-100));
+  background-color: var(--color-accent-400);
+  color: var(--contrast-color-accent-400);
+}
+
+%error-button {
+  @include inset-box-shadow-with-transition(var(--color-warn-accent));
+  background-color: var(--color-warn-primary);
+  color: var(--contrast-color-warn);
 }
 
 %common-button {
@@ -54,6 +70,12 @@ button:focus {
   font-weight: 500;
 }
 
+%common-button-transitions {
+  transition: min-width 500ms cubic-bezier(0.455, 0.03, 0.515, 0.955),
+    min-height 500ms cubic-bezier(0.455, 0.03, 0.515, 0.955),
+    box-shadow 250ms cubic-bezier(0.445, 0.05, 0.55, 0.95);
+}
+
 %floating-action-button {
   @extend %common-button;
   @include border-radius("sm");
@@ -63,5 +85,11 @@ button:focus {
 %extended-fab {
   @extend %floating-action-button;
   @include border-radius("md");
-  padding: 1em 1.5em;
+  padding: 0.75em 1.25em;
+}
+
+%spinner-defaults {
+  --size: max(var(--h1) * 1.5, 7.5vmin);
+  width: var(--size) !important;
+  height: var(--size) !important;
 }
