--- a/src/scss/utils.scss
+++ b/src/scss/utils.scss
@@ -50,8 +50,7 @@
   @include inset-box-shadow($color);
   transition: box-shadow 250ms cubic-bezier(0.445, 0.05, 0.55, 0.95);
 
-  &:hover,
-  &:active {
+  &:is(:hover, :active, :focus-visible) {
     box-shadow: none;
   }
 }
