Removed NgOptimizedImage from components

--- a/src/app/app-view/feature/app-view.page.component.html
+++ b/src/app/app-view/feature/app-view.page.component.html
@@ -1,11 +1,14 @@
-<app-navbar #navbar color="accent" sidenavColor="var(--color-accent-100)">
+<app-navbar
+  #navbar
+  color="accent"
+  sidenavColor="var(--color-accent-100)"
+>
   <ng-template #logo>
     <img
-      ngSrc="assets/shared/logo.webp"
+      src="assets/shared/logo.webp"
       alt="Memo-licious logo"
       height="56"
       width="56"
-      priority
     />
   </ng-template>
 
