--- a/src/app/getting-started/choose-path/choose-path.component.html
+++ b/src/app/getting-started/choose-path/choose-path.component.html
@@ -1,11 +1,13 @@
 <main class="color-transition">
-  <section #container class="container">
+  <section
+    #container
+    class="container"
+  >
     <img
       class="background-image"
       width="543"
       height="966"
-      ngSrc="../../../assets/getting-started/Whiteboard-List-Shoper.webp"
-      priority
+      src="../../../assets/getting-started/Whiteboard-List-Shoper.webp"
       alt="background photo of a note"
     />
     <app-shopping-three
