--- a/src/app/getting-started/first-view/first-view.component.html
+++ b/src/app/getting-started/first-view/first-view.component.html
@@ -1,6 +1,6 @@
 <main>
   <img
-    ngSrc="../../../assets/getting-started/intro1.webp"
+    src="../../../assets/getting-started/intro1.webp"
     width="1200"
     height="1200"
     alt="A group of daily products (banana, chocolate, nuts and coffee)"
