--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -4,7 +4,7 @@
     priority
     height="1024"
     width="1094"
-    ngSrc="../../assets/shared/logo.webp"
+    src="../../assets/shared/logo.webp"
     alt="Logo of Memo-licious"
   />
 </header>
@@ -19,7 +19,9 @@
         />
       </h1>
       <p>
-        <a routerLink="/getting-started/hello" class="get-started"
+        <a
+          routerLink="/getting-started/hello"
+          class="get-started"
           >Get Started!</a
         >
       </p>
