--- a/src/app/app-view/feature/app-view-list/app-view-list.component.scss
+++ b/src/app/app-view/feature/app-view-list/app-view-list.component.scss
@@ -1,14 +1,9 @@
-@use "src/scss/utils.scss" as *;
-@use "src/scss/components.scss" as *;
-@use "../app-view.page-common-child-styles.scss" as defaults;
+@use 'src/scss/utils.scss' as *;
+@use 'src/scss/components.scss' as *;
+@use '../app-view.page-common-child-styles.scss' as defaults;
 
 main {
   @extend %main;
-  width: calc(100% - (2 * #{free-space("sm")}));
-  margin: {
-    left: auto;
-    right: auto;
-  }
 }
 
 .create-new-noteList {
@@ -23,8 +18,8 @@ main {
 .add-new-noteList {
   &__open-button {
     position: fixed;
-    bottom: free-space("sm");
-    right: free-space("sm");
+    bottom: free-space('sm');
+    right: free-space('sm');
 
     &--toggled {
       visibility: hidden;
@@ -39,9 +34,9 @@ main {
 
 .empty {
   @extend %absolute-center;
-  @include border-radius("sm");
-  padding: free-space("sm");
-  width: calc(100% - (#{free-space("sm")} * 2));
+  @include border-radius('sm');
+  padding: free-space('sm');
+  width: calc(100% - (#{free-space('sm')} * 2));
   max-width: max-content;
   background-color: var(--color-accent-100);
   color: var(--contrast-color-accent-100);
