--- a/src/app/auth/guest/guest-register/guest-register.component.html
+++ b/src/app/auth/guest/guest-register/guest-register.component.html
@@ -1,17 +1,31 @@
-<div class="form-wrapper" aria-label="The local account form">
+<div
+  class="form-wrapper"
+  aria-label="The local account form"
+>
   <h1 class="form__header">Create a local account</h1>
-  <form (ngSubmit)="onSubmit()" [formGroup]="localRegisterForm" class="form">
+  <form
+    (ngSubmit)="onSubmit()"
+    [formGroup]="localRegisterForm"
+    class="form"
+  >
     <fieldset class="form-element">
       <label>
         <p class="form-label">Username</p>
-        <input type="text" formControlName="name" />
+        <input
+          type="text"
+          formControlName="name"
+        />
       </label>
       @if (getError('name', 'required') &&
       localRegisterForm.get('name')?.touched) {
       <p class="input-error">This field is required!</p>
-      } @if (getError('name', 'minlength')) {
+      }
+      <!--  -->
+      @if (getError('name', 'minlength')) {
       <p class="input-error">Your name is too short</p>
-      } @if (getError('name', 'maxlength')) {
+      }
+      <!--  -->
+      @if (getError('name', 'maxlength')) {
       <p class="input-error">Your name is too long</p>
       }
     </fieldset>
@@ -22,6 +36,7 @@
         aria-label="Select the authentication method"
       >
         <mat-radio-button
+          value="password"
           [checked]="!isPasswordSelected"
           (input)="isPasswordSelected = true; toggleAuthMethod()"
           (keyup.enter)="isPasswordSelected = true; toggleAuthMethod()"
@@ -31,6 +46,7 @@
           Password
         </mat-radio-button>
         <mat-radio-button
+          value="pin"
           [checked]="!isPasswordSelected"
           (input)="isPasswordSelected = false; toggleAuthMethod()"
           (keyup.enter)="isPasswordSelected = false; toggleAuthMethod()"
@@ -42,16 +58,24 @@
       </mat-radio-group>
     </fieldset>
     @if (isPasswordSelected) {
-    <div formGroupName="passwordGroup" data-test="password-group">
+    <div
+      formGroupName="passwordGroup"
+      data-test="password-group"
+    >
       <fieldset class="form-element">
         <label>
           <p class="form-label">Create your Password</p>
-          <input type="password" formControlName="password" />
+          <input
+            type="password"
+            formControlName="password"
+          />
         </label>
         @if ( getError(['passwordGroup', 'password'], 'required') &&
         localRegisterForm.get(['passwordGroup', 'password'])?.touched) {
         <p class="input-error">This field is required!</p>
-        } @if ( getError(['passwordGroup', 'password'], 'passwordError') &&
+        }
+        <!--  -->
+        @if ( getError(['passwordGroup', 'password'], 'passwordError') &&
         localRegisterForm.get(['passwordGroup', 'password'])?.dirty) {
         <p class="input-error">
           The password must have 8 characters, numbers, and special characters
@@ -61,30 +85,43 @@
       <fieldset class="form-element">
         <label>
           <p class="form-label">Confirm your Password</p>
-          <input type="password" formControlName="confirmPassword" />
+          <input
+            type="password"
+            formControlName="confirmPassword"
+          />
         </label>
         @if ( getError(['passwordGroup', 'confirmPassword'], 'required') &&
         localRegisterForm.get(['passwordGroup', 'confirmPassword']) ?.touched) {
         <p class="input-error">This field is required!</p>
-        } @if ( getError( ['passwordGroup', 'confirmPassword'], 'passwordMatch'
-        ) && localRegisterForm.get(['passwordGroup', 'confirmPassword'])?.dirty)
-        {
+        }
+        <!--  -->
+        @if ( getError( ['passwordGroup', 'confirmPassword'], 'passwordMatch' )
+        && localRegisterForm.get(['passwordGroup', 'confirmPassword'])?.dirty) {
 
         <p class="input-error">The passwords are not the same</p>
         }
       </fieldset>
     </div>
     } @else {
-    <div formGroupName="pinGroup" data-test="pin-group">
+    <div
+      formGroupName="pinGroup"
+      data-test="pin-group"
+    >
       <fieldset class="form-element">
         <label>
           <p class="form-label">Create your PIN</p>
-          <input type="password" inputmode="numeric" formControlName="pin" />
+          <input
+            type="password"
+            inputmode="numeric"
+            formControlName="pin"
+          />
         </label>
         @if ( getError(['pinGroup', 'pin'], 'required') &&
         localRegisterForm.get(['pinGroup', 'pin'])?.touched) {
         <p class="input-error">This field is required!</p>
-        } @if ( getError(['pinGroup', 'pin'], 'pinError') &&
+        }
+        <!--  -->
+        @if ( getError(['pinGroup', 'pin'], 'pinError') &&
         localRegisterForm.get(['pinGroup', 'pin'])?.dirty) {
         <p class="input-error">Invalid PIN. Use from 4 to 8 digits.</p>
         }
@@ -101,7 +138,9 @@
         @if ( getError(['pinGroup', 'confirmPin'], 'required') &&
         localRegisterForm.get(['pinGroup', 'confirmPin'])?.touched) {
         <p class="input-error">This field is required!</p>
-        } @if ( getError(['pinGroup', 'confirmPin'], 'unmatchedPins') &&
+        }
+        <!--  -->
+        @if ( getError(['pinGroup', 'confirmPin'], 'unmatchedPins') &&
         localRegisterForm.get(['pinGroup', 'confirmPin'])?.dirty) {
         <p class="input-error">Your PINs are not the same</p>
         }
