Slight fixes in guest component
- Fixed path imports,
- Updated authLocalUserService.logIn parameters,
- Removed emailAlreadyInUse prop to guest-register

--- a/src/app/auth/guest/guest.component.html
+++ b/src/app/auth/guest/guest.component.html
@@ -11,15 +11,18 @@
         "
       />
     </div>
-    <div #viewContainer class="content">
-      <div class="login-register-content" aria-label="Guest account form">
+    <div
+      #viewContainer
+      class="content"
+    >
+      <div
+        class="login-register-content"
+        aria-label="Guest account form"
+      >
         @if (register) {
         <!--  -->
         @defer (on immediate; prefetch on immediate) {
-        <app-guest-register
-          [emailAlreadyInUse]="alreadyInUseError"
-          (data)="handleRegister($event)"
-        />
+        <app-guest-register (data)="handleRegister($event)" />
         } @loading ( minimum 250ms) {
         <mat-spinner
           class="loading-defer-spinner loading-state-register"
