--- a/src/app/getting-started/choose-path/choose-path.component.scss
+++ b/src/app/getting-started/choose-path/choose-path.component.scss
@@ -1,6 +1,6 @@
-@use "../../../scss/utils.scss" as *;
-@use "../../../scss/components.scss" as *;
-@use "../../../scss/viewport.scss" as view;
+@use '../../../scss/utils.scss' as *;
+@use '../../../scss/components.scss' as *;
+@use '../../../scss/viewport.scss' as view;
 
 main,
 .container {
@@ -26,7 +26,7 @@ main {
 
 .background-image {
   position: absolute;
-  z-index: 0;
+
   -o-object-fit: contain;
   object-fit: contain;
   background-repeat: no-repeat;
@@ -45,18 +45,19 @@ main {
 }
 
 .content {
+  z-index: 1;
   align-self: flex-end;
 
-  --padding: #{free-space("xs")};
+  --padding: #{free-space('xs')};
   margin: 0 var(--padding) var(--padding);
   padding: var(--padding);
   min-height: 45vh;
-  @include border-radius("md");
+  @include border-radius('md');
 
   display: grid;
   place-items: center;
   text-align: center;
-  row-gap: free-space("xl");
+  row-gap: free-space('xl');
 
   color: var(--contrast-color-accent-300);
   background-color: var(--color-accent-300);
@@ -72,7 +73,7 @@ main {
 
   &__CTA {
     display: flex;
-    gap: free-space("sm");
+    gap: free-space('sm');
     justify-content: space-between;
 
     & > * {
